# api_generator

./: .gitignore  db_blank.sql  readme.md
apidoc/: api_data.js
apidoc/module/: user.json
application/config/: constants.php  database.php
application/helpers/: app_helper.php
application/models/: Model_asset_category.php  Model_assets.php  Model_attribute_master.php  Model_audit_trail.php  Model_category_master.php  Model_client_advance_payment.php  Model_client_master.php  Model_company_setting.php  Model_country_master.php  (+104 more)
microservice_generator/: README.md  pyproject.toml
microservice_generator/examples/: schema.sql  services.yml
microservice_generator/microservice_generator/: cli.py
microservice_generator/microservice_generator/config/: loader.py
microservice_generator/microservice_generator/generators/: base.py  registry.py
microservice_generator/microservice_generator/generators/springboot/: generator.py  type_mapper.py
microservice_generator/microservice_generator/generators/springboot/templates/: Application.java.j2  Controller.java.j2  DefaultHooks.java.j2  Dockerfile.j2  Entity.java.j2  Hooks.java.j2  Repository.java.j2  Service.java.j2  application.yml.j2  docker-compose.yml.j2  pom.xml.j2
microservice_generator/microservice_generator/hooks/: store.py
microservice_generator/microservice_generator/parser/: ddl_parser.py  models.py
microservice_generator/microservice_generator/utils/: naming.py
print/: .po.php.swp  odc.php  odc.php_1arp  odc.php_bckp  odc.php_latest  odc_bckp.php  odc_dpl.php  po.php  po.php_bckp  style.css  test.txt
(+23 files in other folders)
